added improved refresh tokens and bidding system with websockets